Created script for end-opint named : createAdminAccount
